# mcp-server-microsoft-paint

./: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  advanced_debug.py  basic_test.py  better_test.py  core_api.txt  debug_mcp_server.py  debug_paint.py  debug_test.py  direct_draw_test.py  direct_json_rpc_test.py  direct_paint_test.py  direct_test.py  echo_test.py  final_test.py  minimal_test.py  random_lines_test.py  rectangle_debug_test.py  rectangle_test.py  simple_test.py  simple_test_client.py  simplest_test.py  super_simple_test.py  test_client.py
samples/: uia_test.rs
specs/: architecture_diagram.md  client_integration.md  mcp_protocol.md  windows_integration.md
src/: core.rs  error.rs  lib.rs  main.rs  models.rs  paint_integration.rs  prompts.rs  protocol.rs  uia.rs  windows.rs
